<resources>
    <string name="app_name">智通行</string>

    <string name="tab_home">首页</string>
    <string name="tab_mine">我的</string>
    <string name="title_find_psw">修改手机号</string>
    <string name="title_login">登录</string>
    <string name="title_apply_record">申请记录</string>
    <string name="title_my_identifaction">我的认证</string>
    <string name="title_register">注册</string>
    <string name="title_scan_show_record">扫码/亮码记录</string>
    <string name="title_personal_center">个人中心</string>
    <string name="hint_not_right_person">提示：您不是本小区人员</string>
    <string name="code_check_pass">审核通过</string>
    <string name="code_check_under_check">待审核</string>
    <string name="code_check_unpass">审核未通过</string>
    <string name="title_apply_car_card">车辆出入证申请</string>
    <string name="scan_qr">识别二维码</string>
    <string name="get_qr_icon">识别二维码</string>
    <string name="scan_qr2">扫描二维码</string>
    <string name="scan_qr3">请将二维码对准至框内</string>
    <string name="title_my_cards">我的卡证</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">车辆出入证</string>
    <string name="tab_text_2">人员出入证</string>
    <string name="tab_text_3">工作证</string>
    <string name="start_now">立即体验</string>
    <string name="tab_username_login">密码登录</string>
    <string name="tab_code_login">免密登录</string>
    <string name="hint4">请输入手机号</string>
    <string name="hint5">请输入密码</string>
    <string name="hint6">请输入验证码</string>
    <string name="send_code">获取验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="hint7">已阅读并同意《用户协议》</string>
    <string name="tv_register_success">注册成功</string>
    <string name="register_hint">欢迎加入“智通行”</string>
    <string name="submit">提交</string>
    <string name="register_title">注册</string>
    <string name="hint8">密码长度为6-16位</string>
    <string name="hint9">大写字母</string>
    <string name="hint10">小写字母</string>
    <string name="and">和</string>
    <string name="hint11">数字</string>
    <string name="receive_code_hint1">请查看是否有以下情况？</string>
    <string name="receive_code_hint2">1.手机号输入错误</string>
    <string name="receive_code_hint3">请核对，并重新输入</string>
    <string name="receive_code_hint4">2.设置了短信拦截</string>
    <string name="receive_code_hint5">请在短信设置中取消拦截</string>
    <string name="receive_code_hint6">3.该号码欠费停机</string>
    <string name="receive_code_hint7">建议您更换电话号码或缴费后重新获取验证码</string>
    <string name="receive_code_hint8">4.信号不好</string>
    <string name="receive_code_hint9">请您稍后重试或联系运营商</string>
    <string name="code_data">验证码已发送至：</string>
    <string name="code_title">请输入验证码</string>
    <string name="resend_code">20秒后重新获取</string>
    <string name="cannot_receive_code">收不到验证码？</string>
    <string name="btn_reRendValidate"><xliff id="max">%1$d</xliff>秒后重新发送</string>
    <string name="btn_reRendValidate2">重新发送(<xliff id="max">%1$d</xliff>)</string>

    <string name="btn_reRendValidate_apply"><xliff id="max">%1$d</xliff>秒后可重新推送申请</string>
    <string name="btn_reRendValidate_apply2">重新推送申请(<xliff id="max">%1$d</xliff>)</string>
    <string name="sms_send_success">验证码发送成功</string>
    <string name="hint12">密码最大长度为16位</string>
    <string name="hint14">手机号不正确，请查证</string>
    <string name="login_success">登录成功</string>
    <string name="net_slow">网络延迟，请稍后重试</string>
    <string name="permission_hint">即将重新申请的权限是程序必须依赖的权限</string>
    <string name="comfirm">我已明白</string>
    <string name="cancle">取消</string>
    <string name="permission_hand">您需要去应用程序设置当中手动开启权限</string>
    <string name="is_logout">您确定退出？</string>
    <string name="confirm">确定</string>
    <string name="logout_success">退出成功</string>
    <string name="name">姓名</string>
    <string name="id_card">身份证</string>
    <string name="hint15">请输入证件号码</string>
    <string name="next_step">下一步</string>
    <string name="real_name_check">实名认证</string>
    <string name="next_step_scan_face">下一步 面部识别</string>
    <string name="hint16">请输入姓名</string>
    <string name="get_user_phone_fail">获取用户手机号失败,尝试重新登录</string>
    <string name="detection_success">实名认证成功</string>
    <string name="code_check_empty">请输入验证码</string>
    <string name="phone_wrong">电话不正确，请查证</string>
    <string name="choose_licence">请勾选用户协议</string>
    <string name="choose_licence2">请勾选协议</string>
    <string name="psw_error">密码长度为6-16位</string>
    <string name="go_auth_check">去实名</string>
    <string name="hint17">请先进行实名认证</string>
    <string name="face_success">实名认证成功！</string>
    <string name="title_place_code_place_type">选择场所类型</string>
    <string name="company">企业</string>
    <string name="company_detail">有营业执照的企业和分支机构</string>
    <string name="gov">政府/事业单位</string>
    <string name="gov_detail">各级各类政府机构、事业单位;如:民政、公安机关、司法、市政、工商等，需提供组织机构代码证</string>
    <string name="other">其他组织</string>
    <string name="other_detail">不属于企业、政府、事业单位，需提供组织机构代码证。如:已登记的协会、基金会</string>
    <string name="place_type">场所类型</string>
    <string name="palce_name">单位/政府名称</string>
    <string name="hint18">请输入单位/政府名称</string>
    <string name="place_code">统一信用代码</string>
    <string name="place_city">证件上所在城市</string>
    <string name="hint19">请输入统一信用代码</string>
    <string name="hint20">请选择证件上所在城市</string>
    <string name="hint21">请填写和营业执照，组织机构代码证等一致的省市</string>
    <string name="legal_person_name">法定代表人</string>
    <string name="hint22">请输入法定代表人</string>
    <string name="legal_person_name_id_card">法人身份证号码</string>
    <string name="hint23">请输入法人身份证号码</string>
    <string name="papers_type">证件类型</string>
    <string name="licence_type_a">多证合一营业执照</string>
    <string name="licence_type_a_hint">原“注册号”字样，调整为18位“统一社会信用代码”</string>
    <string name="licence_type_b_hint">仍然标识为15位的“注册号”</string>
    <string name="licence_type_b">普通营业执照</string>
    <string name="upload_licence">上传证件照</string>
    <string name="upload_licence_hint">证件必须完整清晰，且在有效期内，大小不超过5M（若已办理三证合一，请上传最新的营业执照）</string>
    <string name="upload_pic">拍照/上传照片</string>
    <string name="title_upload_paper">上传申请公函</string>
    <string name="paper_title">智通行畅行码申请公函</string>
    <string name="hint24">请拍照后上传（照片所有信息需清晰可见，内容真实有效）</string>
    <string name="download_tample">下载模板</string>
    <string name="upload_licence_paper">拍照/上传公函</string>
    <string name="hint25">已阅读并同意</string>
    <string name="licence_a">《智通行公约》</string>
    <string name="licence_b">《智通行服务协议》</string>
    <string name="licence_type_c">事业单位法人证书或统一社会信用代码证书</string>
    <string name="licence_type_c_hint">"事业单位法人证书或统一社会信用代码证书 "</string>
    <string name="licence_type_d">普通组织机构代码证</string>
    <string name="licence_type_d_hint">普通组织机构代码证</string>
    <string name="place_type_gov">政府/事业单位</string>
    <string name="place_type_company">企业</string>
    <string name="place_type_other">其他组织</string>
    <string name="title_apply_place">场所码申请</string>
    <string name="title_apply_code_place">场所码申请</string>
    <string name="tv_addr">详细地址</string>
    <string name="hint31">请输入详细地址</string>
    <string name="hint33">法人身份证号码有误,请重试</string>
    <string name="hint34">请上传证照</string>
    <string name="upload_paper_hint">请先上传公函</string>
    <string name="upload_paper_cb_hint">请先阅读并勾选协议</string>
    <string name="hint36">申请已提交成功，请到“我的”中的“申请记录”中查看申请进度</string>
    <string name="error_msg">访问异常，请重试</string>
    <string name="attestationed">已认证</string>
    <string name="tab_record_1">场所码</string>
    <string name="tab_record_2">人员出入证</string>
    <string name="tab_record_3">车辆出入证</string>
    <string name="title_person_card_apply">人员出入证申请</string>
    <string name="palce_name_hint">场所名</string>
    <string name="hint_select">请选择</string>
    <string name="card_type">出入证类型</string>
    <string name="referrer_info">推荐人信息</string>
    <string name="name_hint">请填写姓名</string>
    <string name="person_phone">联系电话</string>
    <string name="phone_hint">请填写联系电话</string>
    <string name="person_dep">部门</string>
    <string name="dep_hint">请填写部门</string>
    <string name="person_job">职务(选填)</string>
    <string name="job_hint">请填写职务</string>
    <string name="choose_place_name">选择场所名</string>
    <string name="title_card_type_choose">选择出入证类型</string>
    <string name="card_type_long">长期</string>
    <string name="card_type_short">短期</string>
    <string name="card_type_temporary">临时</string>
    <string name="plate_num">车牌号</string>
    <string name="hint37">请填写</string>
    <string name="user_id_lost">获取登录信息失败，请重新登录</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="no_data">暂无数据</string>
    <string name="load_first">请先登录</string>
    <string name="hint38">请输入场所名称</string>
    <string name="hint39">请先选择场所</string>
    <string name="reason">申请原因</string>
    <string name="hint_reason">请填写原因</string>
    <string name="hint40">请选择出入证类型</string>
    <string name="hint41">请填写申请原因</string>
    <string name="hint42">请填写推荐人姓名</string>
    <string name="hint43">请填写推荐人电话</string>
    <string name="hint44">请填写推荐人部门</string>
    <string name="hint46">推荐人电话不正确，请查证</string>
    <string name="hint47">请输入车牌号</string>
    <string name="in_out_state">出行状态</string>
    <string name="in_out_state_in">进入</string>
    <string name="contact_name">联络人姓名</string>
    <string name="hint_contact_name">请输入联络人姓名</string>
    <string name="contact_phone">联络人电话</string>
    <string name="hint_contact_phone">请输入联络人电话</string>
    <string name="contact_dep">联络人所在部门</string>
    <string name="hint_contact_dep">请输入联络人所在部门</string>
    <string name="contact_reason">事由</string>
    <string name="hint_contact_reason">请输入事由</string>
    <string name="in_out_state_out">离开</string>
    <string name="scan_result_licence">我已阅读本申报所列事项并确认以上填报信息真实有效</string>
    <string name="title_scan_result">通行凭证</string>
    <string name="real_name">已实名</string>
    <string name="un_real_name">未实名</string>
    <string name="car_photo">车辆正面照片</string>
    <string name="car_photo_hint">车辆照片需清晰完整,大小不超过5M</string>
    <string name="car_paper_photo">驾驶证照片</string>
    <string name="driving_licence_hint">证件必须完整清晰,且在有效期内,大小不超过5M</string>
    <string name="upload_car_photo">请上传车辆照片</string>
    <string name="upload_driving_licence">请上传驾驶证</string>
    <string name="alter">修改</string>
    <string name="title_my_profile">我的资料</string>
    <string name="forbidden">禁止通行</string>
    <string name="alter_success">修改成功</string>
    <string name="card_record_use">正在使用</string>
    <string name="card_record_outoff_date">已过期</string>
    <string name="card_record_useless">已失效</string>
    <string name="title_reset_psw">修改密码</string>
    <string name="phone_empty_hint">电话不能为空</string>
    <string name="psw_empty_error">密码不能为空</string>
    <string name="reset_success">密码重置成功！</string>
    <string name="reapply">重新申请</string>
    <string name="title_show_code_record">亮码记录</string>
    <string name="title_scan_or_show_record">扫码/亮码记录</string>
    <string name="tab_text_show">亮码</string>
    <string name="tab_text_scan">扫码</string>
    <string name="title_scan_success">提交申请成功</string>
    <string name="title_agree_success">审核申请信息</string>
    <string name="apply_again_success">请求成功,请等待回复</string>
    <string name="login_time_out">登录过期，请重新登录</string>
    <string name="wait_confirm">等待对方确认</string>
    <string name="hint48">申请已推送至联络人</string>
    <string name="hint49">长时间未确认请电话联系</string>
    <string name="apply_again">再次申请</string>


</resources>
