<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".apply.activity.PlaceCodePlaceTypeChooseActivity">
    <include layout="@layout/head_title_bar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <LinearLayout
                android:id="@+id/ll_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/shape_circle_coner_grey_1dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textColor="@color/primary_blue"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/company_detail"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_15" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_gov"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/shape_circle_coner_grey_1dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gov"
                    android:textColor="@color/primary_blue"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/gov_detail"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_15" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/shape_circle_coner_grey_1dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textColor="@color/primary_blue"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/other_detail"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_15" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>