<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".apply.activity.CardApplySuccessActivity">

    <include layout="@layout/head_title_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_96"
        android:src="@drawable/image_wait" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_34"
        android:text="@string/wait_confirm"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_13"
        android:text="@string/hint48"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/sp_14" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/hint49"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/sp_14" />

    <Button
        android:id="@+id/btn_apply_again"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/shape_circle_conner_blue_deep"
        android:gravity="center"
        android:text="再次申请"
        android:paddingLeft="@dimen/dp_8"
        android:paddingRight="@dimen/dp_8"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15" />
</LinearLayout>