<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".mine.activity.RegisterSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_100"
            android:scaleType="centerCrop"
            android:src="@drawable/finish" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_37"
            android:text="@string/tv_register_success"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/register_hint"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="@dimen/dp_130"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@+id/iv_loading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/shape_yellow_btn"
            android:gravity="center"
            android:text="@string/start_now"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:src="@drawable/logonbg" />
</FrameLayout>