<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".apply.activity.PlaceUploadPaperActivity">

    <include layout="@layout/head_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_17">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_paper_licence_border"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/paper_title"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_paper_tample"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_24"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_marginBottom="@dimen/dp_30"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginRight="@dimen/dp_45"
                    android:layout_marginBottom="@dimen/dp_130"
                    android:src="@drawable/seal" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_9"
                android:layout_marginRight="@dimen/dp_17"
                android:text="@string/hint24"
                android:textColor="@color/ysf_grey_999999"
                android:textSize="@dimen/sp_13" />

            <Button
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_17"
                android:background="@drawable/shape_upload_btn"
                android:gravity="center"
                android:text="@string/download_tample"
                android:textColor="@color/color_5D97C6"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_35"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/ysf_grey_e9e9e9" />

            <FrameLayout
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_150"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_15">

                <LinearLayout
                    android:id="@+id/ll_pic"
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_150"
                    android:background="@color/color_f7f7f7"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pupian" />


                </LinearLayout>
                <ImageView
                    android:id="@+id/iv_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
            </FrameLayout>

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/shape_upload_btn"
                android:gravity="center"
                android:text="@string/upload_licence_paper"
                android:textColor="@color/color_5D97C6"
                android:textSize="@dimen/sp_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_35"
                android:layout_marginRight="@dimen/dp_17"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_licences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_cb_register_licence"
                    android:paddingLeft="@dimen/dp_8"
                    android:text="@string/hint25"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/licence_a"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/licence_b"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/dp_150"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_27"
                android:layout_marginBottom="@dimen/dp_30"
                android:background="@drawable/shape_circle_conner_blue_deep"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>